# d2l

./: .gitignore  main.py  preliminaries.ipynb  pyproject.toml
